(fix) google login

--- a/apps/api/src/template/email-verification.html
+++ b/apps/api/src/template/email-verification.html
@@ -12,14 +12,14 @@
     <div class="email-container">
         <h2>Email Verification</h2>
         <p>Hello,</p>
-        <p>You are receiving this email to verify that your email registered on PURE website is correct.</p>
+        <p>You are receiving this email to verify that your email registered on PURE website is correct. You have one hour to verify your email and you can only use this verification link once.</p>
         <a href="{{link}}" class="button">Verify Email</a>
         <p>If you did not register to our website, no further action is required.</p>
         <p>If you are having trouble clicking the "Verify Email" button, copy and paste the URL below into your web browser: <br/><a href="{{link}}">`${{link}}`</a></p>
         <p>Regards,<br/>PURE</p>
         <hr/>
         <footer>
-            <p>Contact our support team at [jcwd021001@gmail.com] if you have any questions.</p>
+            <p>Contact our support team at [pureluzwear@gmail.com] if you have any questions.</p>
         </footer>
     </div>
 </body>
