--- a/apps/api/src/template/reset-password.html
+++ b/apps/api/src/template/reset-password.html
@@ -11,25 +11,16 @@
 </head>
 <body>
     <div class="email-container">
-        <h2>Cashier Account Created</h2>
+        <h2>Email Verification</h2>
         <p>Hello,</p>
-        <p>We are pleased to inform you that your cashier account has been successfully created. 
-            You can access your account using this data.</p>
-        <br/>
-        <p>Email: "{{email}}"</p>
-        <p>Password: pass123 </p>
-        <a href="http://localhost:5173/" class="button" >Login Here</a>
-        <br/>
-        <br/>
-        <p>However, to secure your account, you are strongly suggested to set a password. Please click the button below to set up your new password:</p>
-        <a href="{{link}}" class="button" >Set Password</a>
-        <p>If you did not request this account or believe it to be an error, please ignore this email or contact us for support. 
-            Once you set your password, you will be able to access your cashier account and start using our services.</p>
-        <p>Regards,<br/>Starbucks</p>
+        <p>You are receiving this email because you have requested to set new password. You have one hour to reset your password using this reset link and you can only use this reset link once.</p>
+        <a href="{{link}}" class="button">Verify Email</a>
+        <p>If you did not register to our website, no further action is required.</p>
+        <p>If you are having trouble clicking the "Verify Email" button, copy and paste the URL below into your web browser: <br/><a href="{{link}}">`${{link}}`</a></p>
+        <p>Regards,<br/>PURE</p>
         <hr/>
         <footer>
-            <p>If you're having trouble with the button above, copy and paste the following link into your browser:<br/><a href="{{link}}">`${{link}}`</a></p>
-            <p>For any assistance, contact our support team at [support@email.com].</p>
+            <p>Contact our support team at [pureluzwear@gmail.com] if you have any questions.</p>
         </footer>
     </div>
 </body>
